feat(ex ch 6): added exs from chapter 6.